# Client-server-TCP

./: README.md
client/: CMakeCache.txt  CMakeLists.txt  Makefile  cksum_new.cpp  client  client.cpp  client.hpp  client_menu.cpp  cmake_install.cmake  encryption.cpp  encryption.hpp  me.info  transfer.info  user_details.txt
server/: encryption.py  protocol.py  server.py
